# archetype-lang

./: .gitignore  .travis.yml  AUTHORS  CHANGES.md  LICENSE  Makefile  README.md  archetype.opam  archetype.sh  auction_zilliqa.mlw  c3n.low.arl  c3n.tz  check.sh  check_ast.sh  check_contract.sh  check_contracts.sh  check_exec.sh  check_execs.sh  check_ligo.sh  check_mockup.sh  check_mwe.sh  check_pp.sh  check_ret.sh  check_solidity.sh  check_sp.sh  check_tests.sh  check_unit_solidity.sh  check_verif.sh  check_whyml.sh  col_iter_direct_storage.mlw  dune  dune-project  effect_method_asset_clear_aggregate.mlw  effect_method_asset_removeif_partition.mlw  extract.sh  fa12.mlw  functions.md  generateLiquidity.sh  generate_ptree.sh  json.sh  (+8 more)
.github/workflows/: manual.yml  node.js.yml
check/: generate.ts  generate_decomp.ts  generate_json.sh  generate_json.ts  package-lock.json  package.json  tsconfig.json
check/tests/: decomp-ama-passed.spec.ts  decomp-dir-mainnet.spec.ts  decomp-dir-passed.spec.ts  decomp-mainnet.spec.ts  decomp-mic-mainnet.spec.ts  decomp-mic-passed.spec.ts  decomp-mit-mainnet.spec.ts  decomp-mit-passed.spec.ts  model-errors.spec.ts  passed-errors.spec.ts  passed.spec.ts  proposal-model-errors.spec.ts  proposal-type-errors.spec.ts  syntax-errors.spec.ts  type-errors.spec.ts
contracts/: a2.arl  animal_tracking.arl  animal_tracking.cml  auction.arl  auction.cml  auction_lazy.arl  auction_lazy.cml  auction_no_memory.arl  auction_no_memory.cml  auction_zilliqa.arl  auction_zilliqa.cml  autocallable.arl  autocallable.cml  bond.arl  bond.cml  c3n.arl  c3n2.arl  c3n_without_loop.arl  candidate.arl  cerficate_generator.cml  certificate_generator.arl  certificate_generator.cml  certification_token.arl  clause_io_acceptance_of_delivery.arl  clause_io_acceptance_of_delivery.cml  coase.arl  competition.arl  competition.cml  dune  edu_token.arl  edu_token.md  empty.arl  erc20.arl  erc20.cml  erc721.arl  erc721.cml  escrow.arl  escrow.cml  escrow_basic.arl  escrow_penalty.arl  (+48 more)
docker/: Dockerfile
drivers/: liquidity.drv
dtests/: deffered_write.tz  simple.tz  simple2.tz  spy2.tz
extensions/: action_delegation.arlx  delegable.arlx  dune  mutable.arlx  mutable.cmlx  mutable_enum.arlx  mutable_enum.cmlx  mutable_signed.arlx  mutable_signed.cmlx  onlyonce.arlx  onlyonce.cmlx  role_delegation.arlx  role_delegation.cmlx  signedby.arlx  signedby.cmlx  signedby_at_object_level.arlx  signedby_at_object_level.cmlx  signedbyall.arlx  signedbyall.cmlx  test_initialized.arlx  test_initialized.cmlx  test_namespace.arlx  test_namespace.cmlx  traceable.arlx  traceable.cmlx  transaction_delegation.arlx  transaction_delegation.cmlx  transferable.arlx  transferable.cmlx
extra/: types.md
extra/check/: check.sh  check_contracts.sh  check_debug.sh  check_exec.sh  check_sp.sh  check_verif.sh  check_verifs.sh  check_whyml.sh
extra/current/: edu_token.arl
extra/dtests/: avv.tz  basic_entry_assign.tz  basic_entry_assign2.tz  evse_red.tz  fa1_2_red.tz  i2.tz  multi_entry_assign.tz  simple_entry_assign.tz  simple_int.tz  simple_view.tz  spy1.tz  storage_assign.tz  werecoin_red.tz  werecoin_red2.tz
extra/fa1_2_decomp/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
extra/fetch/: contracts.txt  script.sh
extra/proposal/: name_scope.arl  same_field_name.arl  same_field_name_errors.arl
extra/reports/: 2020-02-03.md  2020-02-13.md  2020-03-05.md  2020-03-20.md  2020-05-08.md
extra/script/: check_action.sh  check_arl_decomp.sh  check_compile.sh  check_contract.sh  check_contract_interface.sh  check_contracts.sh  check_decomp.sh  check_decomp_alma.sh  check_decomp_ama.sh  check_decomp_csv.sh  check_json.sh  check_ligo.sh  check_mainnet.sh  check_michelson.sh  check_michelson_contracts.sh  check_mockup.sh  check_pp.sh  check_prolog.sh  check_prove.sh  check_smartpy.sh  check_sps.sh  check_tz.sh  check_unit.sh  check_whyml.sh  decomp_mainnet.sh  decomp_script.sh  decomp_testnet.sh  generate_all_tz.sh  ligo.sh  ligo_storage.sh  michelson.sh  prove.sh  run.sh  run_ligo.sh  smartpy.sh  solidity.sh  why3-ide-mlw.sh  why3-ide.sh  why3-mlw.sh  why3.sh
logo/: archetype-logo.ai
mainnet/arl/: KT18iWQLZDeJ5tTCLrfnPNip2KSZHmFJFUc7.arl  KT19gE62t4H1vqMD7UXZWFr28j16tBnPYtMa.arl  (+39 more)
mlw/: .gitignore  archetype.mlw  archetype2.mlw  archetype3.mlw  dune  fset.mlw  nfset.mlw
npm-package/: LICENSE  README.md  example.js  index.d.ts  index.ts  package-lock.json  package.json  test.js
propal/: add_asset_simple.arl  add_asset_simple.ref.mlw  archetype.mlw
src/: .gitignore  .merlin  Makefile  Makefile.plugin.mk  UF.ml  api.ml  ast.ml  binding.ml  binding_js.ml  binding_ts.ml  check.ml  cmlIdent.ml  cmlIo.ml  cmlIo.mli  cmlLexer.mll  cmlLocation.ml  cmlModel.ml  cmlParseTree.ml  cmlParseUtils.ml  cmlParser.mly  cmlPrint.ml  cml_main.ml  compile.ml  compiler.ml  core.ml  dune  dune.bak  error.ml  extract.ml  extract_w.ml  gen_api_storage.ml  gen_contract_interface.ml  gen_debug_trace.ml  gen_decompile.ml  gen_extra.ml  gen_liquidity.ml  gen_markdown.ml  gen_michelson.ml  gen_model.ml  gen_pt.ml  (+90 more)
src/core/: model.ml
src/liq/: .merlin  Makefile  dune  extract.ml  liq_printer.ml
src/why3/: Makefile  dune  genwhy3.ml  ptree.ml
src2/: Makefile  demich.ml  dune
syntax/: archetype.el  cml.el
test/: Makefile  dune  test.ml
tests/: animal_tracking.cml  auction.cml  auction_lazy.cml  auction_no_memory.cml  auction_zilliqa.cml  bond.cml  clause_io_acceptance_of_delivery.cml  competition.cml  erc20.cml  erc721.cml  escrow.cml  escrow_with_object.cml  governance.cml  guarantee_fund.cml  hello.cml  ico.cml  idempotent.cmlx  miles.cml  miles_with_expiration.cml  mutable.cmlx  mutable_signed.cmlx  one_constant.arl  one_constant.cml  perishable.cml  role_delegation.cmlx  signedby.cmlx  signedby_at_object_level.cmlx  signedbyall.cmlx  test_action.arl  test_action_empty.arl  test_asset.arl  test_asset.cml  test_assign.arl  test_assign.cml  test_at.arl  test_bound_value.arl  test_bound_value.cml  test_conditions.arl  test_contract.arl  test_enum.arl  (+39 more)
why3/: liquidity.drv  liquidity.mlw
(+9006 files in other folders)
