opam-version: "2.0"
maintainer: "The Archetype development team <archetype-dev@edukera.com>"
authors: ["Benoit Rognier <benoit.rognier@edukera.com>"
          "Guillaume Duhamel <guillaume.duhamel@edukera.com>"
          "Pierre-Yves Strub <pierre-yves.strub@polytechnique.edu>"]
homepage: "https://github.com/edukera/archetype-lang"
bug-reports: "https://github.com/edukera/archetype-lang/issues"
dev-repo: "git+https://github.com/edukera/archetype-lang.git"
license: "MIT"

build: [
  ["dune" "build"]
]

depends: [
  "ocaml"               {         = "4.07.0" }
  "dune"                { build & = "1.10.0"  }
  "menhir"
  "omd"                 { = "1.3.1" }
  "uri"                 { = "2.2.1" }
  "digestif"            { = "0.7.2" }
  "why3"                { = "1.2.0" }
  "yojson"              { = "1.7.0" }
  "ppx_deriving"        { = "4.3" }
  "ppx_deriving_yojson" { = "3.4" }
]
