synopsis: "Archetype language compiler"
description:
"""
Archetype is a domain-specific language (DSL) to develop smart contracts on the Tezos blockchain,
with a specific focus on contract security
"""
opam-version: "2.0"
maintainer: "The Archetype development team <archetype-dev@edukera.com>"
authors: ["Benoit Rognier <benoit.rognier@edukera.com>"
          "Guillaume Duhamel <guillaume.duhamel@edukera.com>"
          "Pierre-Yves Strub <pierre-yves.strub@polytechnique.edu>"]
homepage: "https://github.com/edukera/archetype-lang"
bug-reports: "https://github.com/edukera/archetype-lang/issues"
dev-repo: "git+https://github.com/edukera/archetype-lang.git"
license: "MIT"
doc: "https://docs.archetype-lang.org/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"               { >= "4.07.0" }
  "dune"                { >= "1.10.0"  }
  "menhir"
  "uri"                 { >= "2.2.1" }
  "digestif"            { >= "0.7.2" }
  "why3"                { >= "1.2.0" }
  "yojson"
  "ppx_deriving"
  "ppx_deriving_yojson"
]
