(install
 (section share)
 (files
  (animal_tracking.arl as contracts/animal_tracking.arl)
  (auction.arl as contracts/auction.arl)
  (auction_lazy.arl as contracts/auction_lazy.arl)
  (auction_no_memory.arl as contracts/auction_no_memory.arl)
  (auction_zilliqa.arl as contracts/auction_zilliqa.arl)
  (autocallable.arl as contracts/autocallable.arl)
  (bond.arl as contracts/bond.arl)
  (certificate_generator.arl as contracts/certificate_generator.arl)
  (c3n.arl as contracts/c3n.arl)
  (c3n_without_loop.arl as contracts/c3n_without_loop.arl)
  (clause_io_acceptance_of_delivery.arl as contracts/clause_io_acceptance_of_delivery.arl)
  (coase.arl as contracts/coase.arl)
  (competition.arl as contracts/competition.arl)
  (empty.arl as contracts/empty.arl)
  (erc20.arl as contracts/erc20.arl)
  (erc721.arl as contracts/erc721.arl)
  (escrow.arl as contracts/escrow.arl)
  (escrow_basic.arl as contracts/escrow_basic.arl)
  (escrow_simple.arl as contracts/escrow_simple.arl)
  (fizzy.arl as contracts/fizzy.arl)
  (governance.arl as contracts/governance.arl)
  (guarantee_fund.arl as contracts/guarantee_fund.arl)
  (health_care.arl as contracts/health_care.arl)
  (hello.arl as contracts/hello.arl)
  (ico.arl as contracts/ico.arl)
  (miles.arl as contracts/miles.arl)
  (miles_with_expiration.arl as contracts/miles_with_expiration.arl)
  (mini_dao.arl as contracts/mini_dao.arl)
  (perishable.arl as contracts/perishable.arl)
  (vehicule_lifecycle.arl as contracts/vehicule_lifecycle.arl)
  (zero_coupon_bond.arl as contracts/zero_coupon_bond.arl)
  (zero_coupon_bond_with_insurance.arl as contracts/zero_coupon_bond_with_insurance.arl)
 )
)
