(install
 (section share)
 (files
  (animal_tracking.arl as contracts/animal_tracking.arl)
  (auction_lazy.arl as contracts/auction_lazy.arl)
  (auction_no_memory.arl as contracts/auction_no_memory.arl)
  (auction_zilliqa.arl as contracts/auction_zilliqa.arl)
  (auction.arl as contracts/auction.arl)
  (autocallable.arl as contracts/autocallable.arl)
  (bond.arl as contracts/bond.arl)
  (c3n.arl as contracts/c3n.arl)
  (certificate_generator.arl as contracts/certificate_generator.arl)
  (certification_token.arl as contracts/certification_token.arl)
  (clause_io_acceptance_of_delivery.arl as contracts/clause_io_acceptance_of_delivery.arl)
  (coase.arl as contracts/coase.arl)
  (competition.arl as contracts/competition.arl)
  (empty.arl as contracts/empty.arl)
  (erc20.arl as contracts/erc20.arl)
  (escrow_basic.arl as contracts/escrow_basic.arl)
  (escrow_penalty.arl as contracts/escrow_penalty.arl)
  (escrow_simple.arl as contracts/escrow_simple.arl)
  (escrow_without_spec.arl as contracts/escrow_without_spec.arl)
  (fa12.arl as contracts/fa12.arl)
  (fa12_inspector.arl as contracts/fa12_inspector.arl)
  (fizzy.arl as contracts/fizzy.arl)
  (guarantee_fund.arl as contracts/guarantee_fund.arl)
  (health_care.arl as contracts/health_care.arl)
  (hello.arl as contracts/hello.arl)
  (ico.arl as contracts/ico.arl)
  (ideasbox.arl as contracts/ideasbox.arl)
  (miles_with_expiration_simple.arl as contracts/miles_with_expiration_simple.arl)
  (miles_with_expiration.arl as contracts/miles_with_expiration.arl)
  (miles.arl as contracts/miles.arl)
  (mini_dao.arl as contracts/mini_dao.arl)
  (mwe_fit.arl as contracts/mwe_fit.arl)
  (mwe_medium.arl as contracts/mwe_medium.arl)
  (oraclesetvalue.arl as contracts/oraclesetvalue.arl)
  (perishable.arl as contracts/perishable.arl)
  (register_candidate.arl as contracts/register_candidate.arl)
  (register_vote.arl as contracts/register_vote.arl)
  (sig_challenge.arl as contracts/sig_challenge.arl)
  (unanimity.arl as contracts/unanimity.arl)
  (vehicle_lifecycle.arl as contracts/vehicle_lifecycle.arl)
  (voting_process.arl as contracts/voting_process.arl)
  (zero_coupon_bond_with_insurance.arl as contracts/zero_coupon_bond_with_insurance.arl)
  (zero_coupon_bond.arl as contracts/zero_coupon_bond.arl)
 )
)
