(ocamllex lexer michelson_lexer)
(menhir
  (modules parser michelson_parser)
  (flags --explain --inspection --table --dump))

(library
  (name archetype)
  (public_name archetype)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson visitors.ppx)
  )
  (library_flags (-linkall))
  (modules tools core ident options location parseTree parser lexer symbol
  error position pureLexer parseError io printer_tools printer_pt
  printer_pt_markdown ast typing printer_ast model gen_transform gen_model
  printer_model gen_storage gen_api_storage
  printer_model_tools printer_model_ligo printer_model_smartpy printer_model_scaml
  michelson gen_michelson printer_michelson
  michelson_parser michelson_lexer gen_decompile
  gen_why3 mlwtree printer_mlwtree
  )
  (libraries menhirLib digestif num str ppx_deriving yojson ppx_deriving_yojson.runtime hex)
 (flags :standard -w -30  ; Allow sharing of record labels between distinct types.
                  -w -7   ; Allow overridden methods between visitors-generated classes.
                  -w -17) ; Allow visit_big_int not to be declared.
)

(executable
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson)
  )
  (modules lsp services compiler)
  (libraries archetype menhirLib)
  (public_name archetype)
  (name     compiler))
