(ocamllex lexer michelson_lexer)
(menhir
  (modules parser michelson_parser)
  (flags --explain --inspection --table --dump))

(library
  (name archetype)
  (public_name archetype)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson visitors.ppx)
  )
  (library_flags (-linkall))

  (modules tools uF core ident options location parseTree parser lexer symbol
  error position pureLexer parseError pt_helper io printer_tools printer_pt
  ast typing printer_ast
  model gen_model gen_transform mtools
  printer_model gen_storage gen_api_storage
  printer_model_tools
  micheline micheline_printer micheline_tools
  michelson gen_michelson printer_michelson
  michelson_parser michelson_lexer gen_decompile opt_model
  gen_extra mtyping
  binding gen_contract_interface gen_debug_trace compile
  lsp ufind
  )
  (libraries menhirLib num str yojson ppx_deriving_yojson.runtime hex unix xmlm)
 (flags :standard -w -30  ; Allow sharing of record labels between distinct types.
                  -w -7   ; Allow overridden methods between visitors-generated classes.
                  -w -17) ; Allow visit_big_int not to be declared.
)

(executable
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson js_of_ocaml-ppx)
  )
  (modules api)
  (libraries js_of_ocaml archetype menhirLib unix)
  (public_name api)
  (modes native byte js)
  (name  api))

(executable
  (preprocess
    (pps ppx_deriving.std ppx_deriving_yojson)
  )
  (modules compiler)
  (libraries archetype menhirLib unix)
  (public_name archetype)
  (name     compiler))

(executable
 (name unit_test)
 (modules unit_test)
 (libraries archetype alcotest)
 (modes byte))
